target/generated-sources/antlr4/compiler/parser/Proto3Parser.java
// Generated from compiler/parser/Proto3.g4 by ANTLR 4.13.2
package compiler.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class Proto3Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SYNTAX=1, IMPORT=2, PACKAGE=3, OPTION=4, MESSAGE=5, ENUM=6, REPEATED=7, 
		OPTIONAL=8, ONEOF=9, MAP=10, RESERVED=11, TO=12, MAX=13, PUBLIC=14, WEAK=15, 
		DOUBLE=16, FLOAT=17, INT32=18, INT64=19, UINT32=20, UINT64=21, SINT32=22, 
		SINT64=23, FIXED32=24, FIXED64=25, SFIXED32=26, SFIXED64=27, BOOL=28, 
		STRING=29, BYTES=30, TRUE=31, FALSE=32, LBRACE=33, RBRACE=34, LPAREN=35, 
		RPAREN=36, LBRACKET=37, RBRACKET=38, LANGLE=39, RANGLE=40, SEMI=41, COMMA=42, 
		DOT=43, EQ=44, MINUS=45, PLUS=46, STRING_LITERAL=47, FLOAT_LITERAL=48, 
		INTEGER_LITERAL=49, IDENTIFIER=50, LINE_COMMENT=51, BLOCK_COMMENT=52, 
		WS=53;
	public static final int
		RULE_proto = 0, RULE_topLevelItem = 1, RULE_emptyStatement = 2, RULE_syntaxStatement = 3, 
		RULE_importStatement = 4, RULE_importModifier = 5, RULE_packageStatement = 6, 
		RULE_optionStatement = 7, RULE_fullIdent = 8, RULE_optionName = 9, RULE_optionNamePart = 10, 
		RULE_typeReference = 11, RULE_constant = 12, RULE_type_ = 13, RULE_scalarType = 14, 
		RULE_keyType = 15, RULE_fieldNumber = 16, RULE_field = 17, RULE_fieldModifier = 18, 
		RULE_fieldOptions = 19, RULE_fieldOption = 20, RULE_oneofDef = 21, RULE_oneofItem = 22, 
		RULE_oneofField = 23, RULE_mapField = 24, RULE_reserved = 25, RULE_ranges = 26, 
		RULE_range_ = 27, RULE_fieldNames = 28, RULE_messageDef = 29, RULE_messageBody = 30, 
		RULE_messageBodyItem = 31, RULE_enumDef = 32, RULE_enumBody = 33, RULE_enumBodyItem = 34, 
		RULE_enumField = 35, RULE_enumValueOptions = 36, RULE_enumValueOption = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"proto", "topLevelItem", "emptyStatement", "syntaxStatement", "importStatement", 
			"importModifier", "packageStatement", "optionStatement", "fullIdent", 
			"optionName", "optionNamePart", "typeReference", "constant", "type_", 
			"scalarType", "keyType", "fieldNumber", "field", "fieldModifier", "fieldOptions", 
			"fieldOption", "oneofDef", "oneofItem", "oneofField", "mapField", "reserved", 
			"ranges", "range_", "fieldNames", "messageDef", "messageBody", "messageBodyItem", 
			"enumDef", "enumBody", "enumBodyItem", "enumField", "enumValueOptions", 
			"enumValueOption"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'syntax'", "'import'", "'package'", "'option'", "'message'", "'enum'", 
			"'repeated'", "'optional'", "'oneof'", "'map'", "'reserved'", "'to'", 
			"'max'", "'public'", "'weak'", "'double'", "'float'", "'int32'", "'int64'", 
			"'uint32'", "'uint64'", "'sint32'", "'sint64'", "'fixed32'", "'fixed64'", 
			"'sfixed32'", "'sfixed64'", "'bool'", "'string'", "'bytes'", "'true'", 
			"'false'", "'{'", "'}'", "'('", "')'", "'['", "']'", "'<'", "'>'", "';'", 
			"','", "'.'", "'='", "'-'", "'+'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SYNTAX", "IMPORT", "PACKAGE", "OPTION", "MESSAGE", "ENUM", "REPEATED", 
			"OPTIONAL", "ONEOF", "MAP", "RESERVED", "TO", "MAX", "PUBLIC", "WEAK", 
			"DOUBLE", "FLOAT", "INT32", "INT64", "UINT32", "UINT64", "SINT32", "SINT64", 
			"FIXED32", "FIXED64", "SFIXED32", "SFIXED64", "BOOL", "STRING", "BYTES", 
			"TRUE", "FALSE", "LBRACE", "RBRACE", "LPAREN", "RPAREN", "LBRACKET", 
			"RBRACKET", "LANGLE", "RANGLE", "SEMI", "COMMA", "DOT", "EQ", "MINUS", 
			"PLUS", "STRING_LITERAL", "FLOAT_LITERAL", "INTEGER_LITERAL", "IDENTIFIER", 
			"LINE_COMMENT", "BLOCK_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Proto3.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Proto3Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProtoContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(Proto3Parser.EOF, 0); }
		public SyntaxStatementContext syntaxStatement() {
			return getRuleContext(SyntaxStatementContext.class,0);
		}
		public List<TopLevelItemContext> topLevelItem() {
			return getRuleContexts(TopLevelItemContext.class);
		}
		public TopLevelItemContext topLevelItem(int i) {
			return getRuleContext(TopLevelItemContext.class,i);
		}
		public ProtoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Proto3Listener ) ((Proto3Listener)listener).enterProto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Proto3Listener ) ((Proto3Listener)listener).exitProto(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Proto3Visitor ) return ((Proto3Visitor<? extends T>)visitor).visitProto(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProtoContext proto() throws RecognitionException {
		ProtoContext _localctx = new ProtoContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_proto);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SYNTAX) {
				{
				setState(76);
				syntaxStatement();
				}
			}

			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2199023255676L) != 0)) {
				{
				{
				setState(79);
				topLevelItem();
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(85);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TopLevelItemContext extends ParserRuleContext {
		public ImportStatementContext importStatement() {
			return getRuleContext(ImportStatementContext.class,0);
		}
		public PackageStatementContext packageStatement() {
			return getRuleContext(PackageStatementContext.class,0);
		}
		public OptionStatementContext optionStatement() {
			return getRuleContext(OptionStatementContext.class,0);
		}
		public MessageDefContext messageDef() {
			return getRuleContext(MessageDefContext.class,0);
		}
		public EnumDefContext enumDef() {
			return getRuleContext(EnumDefContext.class,0);
		}
		public EmptyStatementContext emptyStatement() {
			return getRuleContext(EmptyStatementContext.class,0);
		}
		public TopLevelItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Proto3Listener ) ((Proto3Listener)listener).enterTopLevelItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Proto3Listener ) ((Proto3Listener)listener).exitTopLevelItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Proto3Visitor ) return ((Proto3Visitor<? extends T>)visitor).visitTopLevelItem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopLevelItemContext topLevelItem() throws RecognitionException {
		TopLevelItemContext _localctx = new TopLevelItemContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_topLevelItem);
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IMPORT:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				importStatement();
				}
				break;
			case PACKAGE:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				packageStatement();
				}
				break;
			case OPTION:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				optionStatement();
				}
				break;
			case MESSAGE:
				enterOuterAlt(_localctx, 4);
				{
				setState(90);
				messageDef();
				}
				break;
			case ENUM:
				enterOuterAlt(_localctx, 5);
				{
				setState(91);
				enumDef();
				}
				break;
			case SEMI:
				enterOuterAlt(_localctx, 6);
				{
				setState(92);
				emptyStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EmptyStatementContext extends ParserRuleContext {
		public TerminalNode SEMI() { return getToken(Proto3Parser.SEMI, 0); }
		public EmptyStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_emptyStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Proto3Listener ) ((Proto3Listener)listener).enterEmptyStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Proto3Listener ) ((Proto3Listener)listener).exitEmptyStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Proto3Visitor ) return ((Proto3Visitor<? extends T>)visitor).visitEmptyStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EmptyStatementContext emptyStatement() throws RecognitionException {
		EmptyStatementContext _localctx = new EmptyStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_emptyStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SyntaxStatementContext extends ParserRuleContext {
		public TerminalNode SYNTAX() { return getToken(Proto3Parser.SYNTAX, 0); }
		public TerminalNode EQ() { return getToken(Proto3Parser.EQ, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(Proto3Parser.STRING_LITERAL, 0); }
		public TerminalNode SEMI() { return getToken(Proto3Parser.SEMI, 0); }
		public SyntaxStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_syntaxStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Proto3Listener ) ((Proto3Listener)listener).enterSyntaxStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Proto3Listener ) ((Proto3Listener)listener).exitSyntaxStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Proto3Visitor ) return ((Proto3Visitor<? extends T>)visitor).visitSyntaxStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SyntaxStatementContext syntaxStatement() throws RecognitionException {
		SyntaxStatementContext _localctx = new SyntaxStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_syntaxStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(SYNTAX);
			setState(98);
			match(EQ);
			setState(99);
			match(STRING_LITERAL);
			setState(100);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(Proto3Parser.IMPORT, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(Proto3Parser.STRING_LITERAL, 0); }
		public TerminalNode SEMI() { return getToken(Proto3Parser.SEMI, 0); }
		public ImportModifierContext importModifier() {
			return getRuleContext(ImportModifierContext.class,0);
		}
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Proto3Listener ) ((Proto3Listener)listener).enterImportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Proto3Listener ) ((Proto3Listener)listener).exitImportStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Proto3Visitor ) return ((Proto3Visitor<? extends T>)visitor).visitImportStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(IMPORT);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PUBLIC || _la==WEAK) {
				{
				setState(103);
				importModifier();
				}
			}

			setState(106);
			match(STRING_LITERAL);
			setState(107);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportModifierContext extends ParserRuleContext {
		public TerminalNode PUBLIC() { return getToken(Proto3Parser.PUBLIC, 0); }
		public TerminalNode WEAK() { return getToken(Proto3Parser.WEAK, 0); }
		public ImportModifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importModifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Proto3Listener ) ((Proto3Listener)listener).enterImportModifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Proto3Listener ) ((Proto3Listener)listener).exitImportModifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Proto3Visitor ) return ((Proto3Visitor<? extends T>)visitor).visitImportModifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportModifierContext importModifier() throws RecognitionException {
		ImportModifierContext _localctx = new ImportModifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_importModifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_la = _input.LA(1);
			if ( !(_la==PUBLIC || _la==WEAK) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PackageStatementContext extends ParserRuleContext {
		public TerminalNode PACKAGE() { return getToken(Proto3Parser.PACKAGE, 0); }
		public FullIdentContext fullIdent() {
			return getRuleContext(FullIdentContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(Proto3Parser.SEMI, 0); }
		public PackageStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Proto3Listener ) ((Proto3Listener)listener).enterPackageStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Proto3Listener ) ((Proto3Listener)listener).exitPackageStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Proto3Visitor ) return ((Proto3Visitor<? extends T>)visitor).visitPackageStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackageStatementContext packageStatement() throws RecognitionException {
		PackageStatementContext _localctx = new PackageStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_packageStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(PACKAGE);
			setState(112);
			fullIdent();
			setState(113);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OptionStatementContext extends ParserRuleContext {
		public TerminalNode OPTION() { return getToken(Proto3Parser.OPTION, 0); }
		public OptionNameContext optionName() {
			return getRuleContext(OptionNameContext.class,0);
		}
		public TerminalNode EQ() { return getToken(Proto3Parser.EQ, 0); }
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(Proto3Parser.SEMI, 0); }
		public OptionStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optionStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Proto3Listener ) ((Proto3Listener)listener).enterOptionStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Proto3Listener ) ((Proto3Listener)listener).exitOptionStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Proto3Visitor ) return ((Proto3Visitor<? extends T>)visitor).visitOptionStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptionStatementContext optionStatement() throws RecognitionException {
		OptionStatementContext _localctx = new OptionStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_optionStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(OPTION);
			setState(116);
			optionName();
			setState(117);
			match(EQ);
			setState(118);
			constant();
			setState(119);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FullIdentContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(Proto3Parser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(Proto3Parser.IDENTIFIER, i);
		}
		public List<TerminalNode> DOT() { return getTokens(Proto3Parser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(Proto3Parser.DOT, i);
		}
		public FullIdentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fullIdent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Proto3Listener ) ((Proto3Listener)listener).enterFullIdent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Proto3Listener ) ((Proto3Listener)listener).exitFullIdent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Proto3Visitor ) return ((Proto3Visitor<? extends T>)visitor).visitFullIdent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FullIdentContext fullIdent() throws RecognitionException {
		FullIdentContext _localctx = new FullIdentContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_fullIdent);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(IDENTIFIER);
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(122);
				match(DOT);
				setState(123);
				match(IDENTIFIER);
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OptionNameContext extends ParserRuleContext {
		public List<OptionNamePartContext> optionNamePart() {
			return getRuleContexts(OptionNamePartContext.class);
		}
		public OptionNamePartContext optionNamePart(int i) {
			return getRuleContext(OptionNamePartContext.class,i);
		}
		public List<TerminalNode> DOT() { return getTokens(Proto3Parser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(Proto3Parser.DOT, i);
		}
		public OptionNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optionName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Proto3Listener ) ((Proto3Listener)listener).enterOptionName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Proto3Listener ) ((Proto3Listener)listener).exitOptionName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Proto3Visitor ) return ((Proto3Visitor<? extends T>)visitor).visitOptionName(this);
			else return visitor.visitChildren(this);
		}
	}
